fixed image overflowing bug

--- a/app/styles/components/_partners.scss
+++ b/app/styles/components/_partners.scss
@@ -54,6 +54,8 @@
         
       @media (max-width: $phone) {
             font-size: 10px;
+            padding: 6px 10px;
+
             }
   
         
@@ -69,8 +71,8 @@
   border-radius: 50%;
 
   @media (max-width: $phone) {
-    width: 32px;
-  height: 32px;
+    width: 28px;
+  height: 28px;
   }
 
 }
